- Added About box with Version release info to RPi Hub - Added Hub options from Ethernet Connection to Connection and from Ethernet to ComPort, completely untested

--- a/Projects/RaspberryPi_Hub/Forms/form_main.lfm
+++ b/Projects/RaspberryPi_Hub/Forms/form_main.lfm
@@ -1,14 +1,15 @@
 object Form1: TForm1
-  Left = 282
+  Left = 427
   Height = 451
-  Top = 189
+  Top = 202
   Width = 742
   Caption = 'Lcc Raspberry Pi Hub'
   ClientHeight = 451
   ClientWidth = 742
+  Menu = MainMenu
   OnCloseQuery = FormCloseQuery
   OnShow = FormShow
-  LCLVersion = '1.5'
+  LCLVersion = '1.4.0.4'
   object ToolBar1: TToolBar
     Left = 0
     Height = 48
@@ -19,70 +20,70 @@ object Form1: TForm1
     Images = ImageListMain
     ShowCaptions = True
     TabOrder = 0
-    object ToolButton1: TToolButton
-      Left = 504
+    object ToolButtonSettings: TToolButton
+      Left = 493
       Top = 2
-      Action = ActionSettings
+      Action = ActionToolsSettingsShowWin
     end
-    object ToolButton2: TToolButton
-      Left = 387
+    object ToolButtonSpace1: TToolButton
+      Left = 350
       Height = 44
       Top = 2
       Width = 22
-      Caption = 'ToolButton2'
+      Caption = 'ToolButtonSpace1'
       Style = tbsSeparator
     end
-    object ToolButton3: TToolButton
-      Left = 316
+    object ToolButtonComPort: TToolButton
+      Left = 288
       Top = 2
       Action = ActionComPort
     end
-    object ToolButton5: TToolButton
+    object ToolButtonEthServer: TToolButton
       Left = 1
       Top = 2
       Action = ActionEthernetServer
     end
-    object ToolButton4: TToolButton
-      Left = 409
+    object ToolButtonLogWindow: TToolButton
+      Left = 372
       Top = 2
       Action = ActionLogWindow
     end
-    object ToolButton6: TToolButton
-      Left = 226
+    object ToolButtonEthUseTCP: TToolButton
+      Left = 207
       Top = 2
       Action = ActionTCP
     end
-    object ToolButton7: TToolButton
-      Left = 294
+    object ToolButtonSpace0: TToolButton
+      Left = 266
       Height = 44
       Top = 2
       Width = 22
-      Caption = 'ToolButton7'
+      Caption = 'ToolButtonSpace0'
       Style = tbsSeparator
     end
-    object ToolButton8: TToolButton
-      Left = 604
+    object ToolButtonProperties: TToolButton
+      Left = 586
       Top = 2
       Action = ActionPropertiesWindow
     end
-    object ToolButton9: TToolButton
-      Left = 582
+    object ToolButtonSpace2: TToolButton
+      Left = 564
       Height = 44
       Top = 2
       Width = 22
-      Caption = 'ToolButton9'
+      Caption = 'ToolButtonSpace2'
       Style = tbsSeparator
     end
-    object ToolButton10: TToolButton
-      Left = 116
+    object ToolButtonEthClient: TToolButton
+      Left = 105
       Top = 2
       Action = ActionEthernetClient
     end
   end
   object StatusBarMain: TStatusBar
     Left = 0
-    Height = 25
-    Top = 426
+    Height = 15
+    Top = 436
     Width = 742
     Panels = <    
       item
@@ -98,16 +99,16 @@ object Form1: TForm1
   end
   object PanelNetworkTree: TPanel
     Left = 0
-    Height = 240
+    Height = 250
     Top = 48
     Width = 210
     Align = alLeft
-    ClientHeight = 240
+    ClientHeight = 250
     ClientWidth = 210
     TabOrder = 2
     object LabelMyNodes: TLabel
       Left = 1
-      Height = 21
+      Height = 16
       Top = 1
       Width = 208
       Align = alTop
@@ -117,8 +118,8 @@ object Form1: TForm1
     end
     object LccNodeSelector: TLccNodeSelector
       Left = 1
-      Height = 217
-      Top = 22
+      Height = 232
+      Top = 17
       Width = 208
       HorzScrollBar.Page = 10
       HorzScrollBar.Tracking = True
@@ -147,24 +148,24 @@ object Form1: TForm1
   end
   object SplitterMain: TSplitter
     Left = 210
-    Height = 240
+    Height = 250
     Top = 48
     Width = 8
   end
   object CheckBoxAutoQueryInfo: TCheckBox
     Left = 232
-    Height = 25
+    Height = 18
     Top = 64
-    Width = 356
+    Width = 320
     Caption = 'Automatically query new Nodes for information'
     OnChange = CheckBoxAutoQueryInfoChange
     TabOrder = 4
   end
   object CheckBoxAutoSendVerifyNodes: TCheckBox
     Left = 233
-    Height = 25
+    Height = 18
     Top = 90
-    Width = 393
+    Width = 352
     Caption = 'Automatically send a Verify Nodes query on Connect'
     OnChange = CheckBoxAutoSendVerifyNodesChange
     TabOrder = 5
@@ -172,7 +173,7 @@ object Form1: TForm1
   object PanelAddOns: TPanel
     Left = 0
     Height = 138
-    Top = 288
+    Top = 298
     Width = 742
     Align = alBottom
     ClientHeight = 138
@@ -180,7 +181,7 @@ object Form1: TForm1
     TabOrder = 6
     object LabelServerConnections: TLabel
       Left = 9
-      Height = 21
+      Height = 16
       Top = 1
       Width = 724
       Align = alTop
@@ -191,8 +192,8 @@ object Form1: TForm1
     end
     object ListViewServerConnections: TListView
       Left = 1
-      Height = 115
-      Top = 22
+      Height = 120
+      Top = 17
       Width = 740
       Align = alClient
       Columns = <      
@@ -216,6 +217,24 @@ object Form1: TForm1
       TabOrder = 0
       ViewStyle = vsReport
     end
+  end
+  object CheckBoxEthHub: TCheckBox
+    Left = 233
+    Height = 18
+    Top = 128
+    Width = 303
+    Caption = 'Hub Mode [Ethernet Server] (In development)'
+    OnChange = CheckBoxEthHubChange
+    TabOrder = 7
+  end
+  object CheckBoxEthComportHub: TCheckBox
+    Left = 233
+    Height = 18
+    Top = 152
+    Width = 360
+    Caption = 'Hub Mode [Ethernet <-> Comport] (In developement)'
+    OnChange = CheckBoxEthComportHubChange
+    TabOrder = 8
   end
   object LccSettings: TLccSettings
     ComPort.AutoConnectAtBoot = False
@@ -242,8 +261,8 @@ object Form1: TForm1
     OnSaveToFile = LccSettingsSaveToFile
     Throttle.AutoLoadFDI = True
     Throttle.AutoScrollDelta = 2
-    left = 264
-    top = 120
+    left = 256
+    top = 168
   end
   object LccComPort: TLccComPort
     Hub = False
@@ -251,6 +270,7 @@ object Form1: TForm1
     NodeManager = LccNodeManager
     OnConnectionStateChange = LccComPortConnectionStateChange
     OnErrorMessage = LccComPortErrorMessage
+    OnReceiveMessage = LccComPortReceiveMessage
     SchedulerPipelineSize = 1
     SleepCount = 0
     left = 313
@@ -281,10 +301,10 @@ object Form1: TForm1
     Images = ImageListMain
     left = 344
     top = 120
-    object ActionSettings: TAction
+    object ActionToolsSettingsShowWin: TAction
       Caption = 'Settings...'
       ImageIndex = 0
-      OnExecute = ActionSettingsExecute
+      OnExecute = ActionToolsSettingsShowWinExecute
     end
     object ActionComPort: TAction
       AutoCheck = True
@@ -300,7 +320,7 @@ object Form1: TForm1
     end
     object ActionLogWindow: TAction
       AutoCheck = True
-      Caption = 'Log Window'
+      Caption = 'Show Log Window'
       ImageIndex = 7
       OnExecute = ActionLogWindowExecute
     end
@@ -322,10 +342,18 @@ object Form1: TForm1
       ImageIndex = 1
       OnExecute = ActionEthernetClientExecute
     end
+    object ActionHelpAboutShow: TAction
+      Caption = 'About...'
+      OnExecute = ActionHelpAboutShowExecute
+    end
+    object ActionToolsPreferenceShowMac: TAction
+      Caption = 'Preferences...'
+      OnExecute = ActionToolsPreferenceShowMacExecute
+    end
   end
   object ImageListMain: TImageList
     left = 432
-    top = 104
+    top = 112
     Bitmap = {
       4C690B0000001000000010000000FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF009E9E9E709C9C9CD69B9B9BFB9999
@@ -689,6 +717,7 @@ object Form1: TForm1
     NodeManager = LccNodeManager
     OnConnectionStateChange = LccEthernetServerConnectionStateChange
     OnErrorMessage = LccEthernetServerErrorMessage
+    OnReceiveMessage = LccEthernetServerReceiveMessage
     SchedulerPipelineSize = 1
     SleepCount = 0
     left = 400
@@ -3413,7 +3442,7 @@ object Form1: TForm1
     object MenuItemLastSpace: TMenuItem
       Caption = '-'
     end
-    object MenuItem2: TMenuItem
+    object MenuItemNodeProperties: TMenuItem
       Action = ActionShowNodeProperties
     end
   end
@@ -3438,5 +3467,51 @@ object Form1: TForm1
     SleepCount = 0
     left = 449
     top = 177
+  end
+  object MainMenu: TMainMenu
+    left = 539
+    top = 145
+    object MenuItemConnection: TMenuItem
+      Caption = 'Connection'
+      object MenuItemConnectionComport: TMenuItem
+        Action = ActionComPort
+        AutoCheck = True
+      end
+      object MenuItemConnectionEthernetServer: TMenuItem
+        Action = ActionEthernetServer
+        AutoCheck = True
+      end
+      object MenuItemConnectionEthernetClient: TMenuItem
+        Action = ActionEthernetClient
+        AutoCheck = True
+      end
+      object MenuItemConnectionDivider0: TMenuItem
+        Caption = '-'
+      end
+      object MenuItemConnectionUseTCP: TMenuItem
+        Action = ActionTCP
+        AutoCheck = True
+      end
+    end
+    object MenuItemTools: TMenuItem
+      Caption = 'Tools'
+      object MenuItemToolsLogWindow: TMenuItem
+        Action = ActionLogWindow
+        AutoCheck = True
+      end
+      object MenuItemToolsProperties: TMenuItem
+        Action = ActionPropertiesWindow
+        AutoCheck = True
+      end
+      object MenuItemToolsSettings: TMenuItem
+        Action = ActionToolsSettingsShowWin
+      end
+    end
+    object MenuItemHelp: TMenuItem
+      Caption = 'Help'
+      object MenuItemHelpAbout: TMenuItem
+        Action = ActionHelpAboutShow
+      end
+    end
   end
 end
