--- a/Projects/RaspberryPi_Hub/Forms/form_settings.lfm
+++ b/Projects/RaspberryPi_Hub/Forms/form_settings.lfm
@@ -1,38 +1,39 @@
 object FormSettings: TFormSettings
-  Left = 470
-  Height = 370
-  Top = 215
-  Width = 584
+  Left = 413
+  Height = 481
+  Top = 126
+  Width = 600
   Caption = 'FormSettings'
-  ClientHeight = 370
-  ClientWidth = 584
-  LCLVersion = '1.4.0.4'
+  ClientHeight = 481
+  ClientWidth = 600
+  LCLVersion = '1.5'
   inline FrameLccSettings: TFrameLccSettings
-    Height = 370
-    Width = 584
+    Height = 481
+    Width = 600
     Align = alClient
-    ClientHeight = 370
-    ClientWidth = 584
+    ClientHeight = 481
+    ClientWidth = 600
     inherited ButtonOk: TButton
-      Left = 429
+      Left = 441
     end
     inherited ButtonCancel: TButton
-      Left = 283
+      Left = 297
     end
     inherited GroupBoxComPort: TGroupBox
-      Width = 559
-      ClientHeight = 43
-      ClientWidth = 551
+      Width = 584
+      ClientWidth = 580
     end
     inherited GroupBoxEthernetClient: TGroupBox
-      Width = 559
-      ClientHeight = 122
-      ClientWidth = 551
+      Width = 584
+      ClientWidth = 580
     end
     inherited GroupBoxEthernetServer: TGroupBox
-      Width = 559
-      ClientHeight = 58
-      ClientWidth = 551
+      Width = 584
+      ClientWidth = 580
+    end
+    inherited GroupBoxPiSpiPort: TGroupBox
+      Width = 584
+      ClientWidth = 580
     end
   end
 end
