--- a/Projects/RR-Circuits_UsbCan_Tester/form_template.lfm
+++ b/Projects/RR-Circuits_UsbCan_Tester/form_template.lfm
@@ -1,13 +1,14 @@
 object FormTemplate: TFormTemplate
-  Left = 293
-  Height = 446
-  Top = 185
+  Left = 347
+  Height = 441
+  Top = 212
   Width = 718
-  Caption = 'LCC Template Application'
-  ClientHeight = 446
+  Caption = 'RR CirKits'
+  ClientHeight = 441
   ClientWidth = 718
   Menu = MainMenu
   OnCloseQuery = FormCloseQuery
+  OnResize = FormResize
   OnShow = FormShow
   LCLVersion = '1.4.0.4'
   object ToolBarMain: TToolBar
@@ -58,7 +59,7 @@ object FormTemplate: TFormTemplate
   object StatusBarMain: TStatusBar
     Left = 0
     Height = 15
-    Top = 431
+    Top = 426
     Width = 718
     Panels = <    
       item
@@ -73,17 +74,122 @@ object FormTemplate: TFormTemplate
   end
   object PanelAppSpace: TPanel
     Left = 0
-    Height = 242
+    Height = 237
     Top = 46
     Width = 718
     Align = alClient
+    ClientHeight = 237
+    ClientWidth = 718
     TabOrder = 2
+    object PanelOutgoing: TPanel
+      Left = 1
+      Height = 235
+      Top = 1
+      Width = 319
+      Align = alLeft
+      ClientHeight = 235
+      ClientWidth = 319
+      TabOrder = 0
+      object MemoOutgoing: TMemo
+        Left = 1
+        Height = 233
+        Top = 1
+        Width = 317
+        Align = alClient
+        TabOrder = 0
+      end
+    end
+    object PanelIncoming: TPanel
+      Left = 442
+      Height = 235
+      Top = 1
+      Width = 275
+      Align = alClient
+      ClientHeight = 235
+      ClientWidth = 275
+      TabOrder = 1
+      object MemoIncoming: TMemo
+        Left = 1
+        Height = 233
+        Top = 1
+        Width = 273
+        Align = alClient
+        TabOrder = 0
+      end
+    end
+    object PanelCenter: TPanel
+      Left = 320
+      Height = 235
+      Top = 1
+      Width = 122
+      Align = alLeft
+      ClientHeight = 235
+      ClientWidth = 122
+      TabOrder = 2
+      object ButtonSend: TButton
+        Left = 8
+        Height = 22
+        Top = 203
+        Width = 104
+        Anchors = [akLeft, akBottom]
+        Caption = 'Send ->'
+        OnClick = ButtonSendClick
+        TabOrder = 0
+      end
+      object SpinEditDelay: TSpinEdit
+        Left = 16
+        Height = 16
+        Top = 162
+        Width = 74
+        Alignment = taRightJustify
+        Anchors = [akLeft, akBottom]
+        MaxValue = 1000
+        OnChange = SpinEditDelayChange
+        TabOrder = 1
+      end
+      object Label1: TLabel
+        Left = 8
+        Height = 16
+        Top = 138
+        Width = 96
+        Anchors = [akLeft, akBottom]
+        Caption = 'Msg Delay (ms)'
+        ParentColor = False
+      end
+      object ButtonSend1: TButton
+        Left = 8
+        Height = 22
+        Top = 8
+        Width = 104
+        Caption = '<- Generate'
+        OnClick = ButtonSend1Click
+        TabOrder = 2
+      end
+      object SpinEditRepeat: TSpinEdit
+        Left = 16
+        Height = 16
+        Top = 66
+        Width = 74
+        Alignment = taRightJustify
+        MinValue = 1
+        TabOrder = 3
+        Value = 1
+      end
+      object Label2: TLabel
+        Left = 8
+        Height = 16
+        Top = 48
+        Width = 85
+        Caption = 'Repeat Count'
+        ParentColor = False
+      end
+    end
   end
   object SplitterApp: TSplitter
     Cursor = crVSplit
     Left = 0
     Height = 5
-    Top = 288
+    Top = 283
     Width = 718
     Align = alBottom
     ResizeAnchor = akBottom
@@ -91,7 +197,7 @@ object FormTemplate: TFormTemplate
   object PanelAddOns: TPanel
     Left = 0
     Height = 138
-    Top = 293
+    Top = 288
     Width = 718
     Align = alBottom
     ClientHeight = 138
@@ -169,6 +275,7 @@ object FormTemplate: TFormTemplate
       Caption = 'Message Trace'
       ImageIndex = 249
       OnExecute = ActionMsgTraceExecute
+      Visible = False
     end
     object ActionHelpAboutShow: TAction
       Category = 'MainMenu'
@@ -189,7 +296,7 @@ object FormTemplate: TFormTemplate
       AutoCheck = True
       Caption = 'LCC Login'
       ImageIndex = 356
-      OnExecute = ActionLccLoginExecute
+      Visible = False
     end
   end
   object ImageListToolbar: TImageList
@@ -32202,9 +32309,10 @@ object FormTemplate: TFormTemplate
   object LccComPort: TLccComPort
     Hub = False
     LccSettings = LccSettings
-    NodeManager = LccNodeManager
     OnConnectionStateChange = LccComPortConnectionStateChange
     OnErrorMessage = LccComPortErrorMessage
+    OnReceiveMessage = LccComPortReceiveMessage
+    OnSchedulerClass = LccComPortSchedulerClass
     SchedulerPipelineSize = 1
     SleepCount = 0
     left = 280
@@ -32214,33 +32322,22 @@ object FormTemplate: TFormTemplate
     Hub = False
     Gridconnect = True
     LccSettings = LccSettings
-    NodeManager = LccNodeManager
     OnConnectionStateChange = LccEthernetClientConnectionStateChange
     OnErrorMessage = LccEthernetClientErrorMessage
+    OnReceiveMessage = LccEthernetClientReceiveMessage
+    OnSchedulerClass = LccEthernetClientSchedulerClass
     SchedulerPipelineSize = 1
     SleepCount = 0
     left = 280
     top = 200
   end
-  object LccNodeManager: TLccNodeManager
-    AutoInterrogateDiscoveredNodes = False
-    AutoSendVerifyNodesOnStart = False
-    Enabled = False
-    CAN = True
-    LccSettings = LccSettings
-    OnAliasIDChanged = LccNodeManagerAliasIDChanged
-    OnLccGetRootNodeClass = LccNodeManagerLccGetRootNodeClass
-    OnNodeIDChanged = LccNodeManagerNodeIDChanged
-    OnRequestMessageSend = LccNodeManagerRequestMessageSend
-    left = 280
-    top = 88
-  end
   object LccEthernetServer: TLccEthernetServer
     Hub = False
     Gridconnect = True
     LccSettings = LccSettings
-    NodeManager = LccNodeManager
     OnConnectionStateChange = LccEthernetServerConnectionStateChange
+    OnReceiveMessage = LccEthernetServerReceiveMessage
+    OnSchedulerClass = LccEthernetServerSchedulerClass
     SchedulerPipelineSize = 1
     SleepCount = 0
     left = 280
@@ -32255,6 +32352,7 @@ object FormTemplate: TFormTemplate
     ComPort.StopBits = cpsb_1_StopBit
     ComPort.FlowControl = cpf_None
     Ethernet.AutoResolveListenerIP = False
+    Ethernet.AutoResolveClientIP = False
     Ethernet.GridConnect = False
     Ethernet.LocalClientIP = '127.0.0.1'
     Ethernet.RemoteListenerIP = '127.0.0.1'
